--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
-title: Your awesome title title
+---
+title: "Welcome to my blog"
+date: 2019-02-02
+---
+
+title: Your awesome title title my
 author: GitHub User steven
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
